2001-01-18  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* INSTALL [HP-UX 10.x]: change recommendations regarding GCC on
	HP-UX 10.x and higher.

	* src/graph3d.c (xtick_callback, ytick_callback, ztick_callback):
 	remove 'static' attribute to avoid bug in HP-UX assembler. This
 	was the root of the long-standing compilation problems with GCC on
 	HP-UX 10 and higher.

	* src/graphics.c (widest2d_callback, xtick2d_callback): dito
	(ytick2d_callback): dito.

2001-01-16  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/term.h: add testing of THREEDKIT macro before activating
 	VGAGL terminal driver.

	* src/interpol.c (cp_approx_spline, cp_tridiag, do_cubic):
 	streamline checks for logscaling and AXIS_UNDO_LOG calls into
 	AXIS_DE_LOG_VALUE calls.

	* src/plot2d.c (eval_plots): dito.

	* src/axis.h (AXIS_INIT3D, AXIS_INIT2D, CHECK_REVERSE): new
 	macro-local variable 'this' for more readable coding.
	(AXIS_INIT3D, AXIS_INIT2D): only calculate log_base element if
 	logscaling is active for that axis, to avoid SIGFPE.

	* src/axis.c (gen_tics): use AXIS_UNDO_LOG instead of explicit
 	coding.
	(axis_output_tics): fix multiline x-axis label positioning.

2001-01-16  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	New PNG feature from <Juergen.vonHagen@etec.uni-karlsruhe.de>:
	
	* term/png.trm (PNG_id, PNG_opts): new option 'picsize' added to
 	table.
	(PNG_options): handle new case PNG_PICSIZE by resizing the
 	drawable area handled by the 'bitmap' module.
	(PNG_options): add output of option picsize.
	(PNG_graphics): use new variable output sizes instead of fixed
 	constants.
	(PNG terminal docs): document new option 'picsize'

2001-01-16  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/win/wpause.c (PauseBox): Change window style of Pause window
 	to make it show up in the taskbar and have it pop up on top of all
 	others.
	(PauseBox): Insert WaitMessage() call to reduce CPU load while