@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: graphics.c,v 1.43 2001/01/18 14:16:58 broeker Exp $"); }
+static char *RCSid() { return RCSid("$Id: graphics.c,v 1.44 2001/01/18 18:45:40 broeker Exp $"); }
 #endif
 
 /* GNUPLOT - graphics.c */
@@ -402,7 +402,8 @@ boundary(scaling, plots, count)
     /* compute ytop from the various components
      *     unless tmargin is explicitly specified  */
 
-    ytop = (int) ((ysize + yoffset) * (t->ymax));
+    /* HBB 20010118: fix round-off bug */
+    ytop = (int) (0.5 + (ysize + yoffset) * (t->ymax));
 
     if (tmargin < 0) {
 	int top_margin = x2label_textheight + title_textheight;
@@ -491,7 +492,7 @@ boundary(scaling, plots, count)
     /* compute ybot from the various components
      *     unless bmargin is explicitly specified  */
 
-    ybot = (int) ((t->ymax) * yoffset);
+    ybot = (int) (0.5 + (t->ymax) * yoffset);
 
     if (bmargin < 0) {
 	ybot += xtic_height + xtic_textheight;
@@ -661,7 +662,7 @@ boundary(scaling, plots, count)
     /* compute xleft from the various components
      *     unless lmargin is explicitly specified  */
 
-    xleft = (int) ((t->xmax) * xoffset);
+    xleft = (int) (0.5 + (t->xmax) * xoffset);
 
     if (lmargin < 0) {
 	xleft += (timelabel_textwidth > ylabel_textwidth ? timelabel_textwidth : ylabel_textwidth)
@@ -725,7 +726,7 @@ boundary(scaling, plots, count)
     /* compute xright from the various components
      *     unless rmargin is explicitly specified  */
 
-    xright = (int) ((t->xmax) * (xsize + xoffset));
+    xright = (int) (0.5 + (t->xmax) * (xsize + xoffset));
 
     if (rmargin < 0) {
 	/* xright -= y2label_textwidth + y2tic_width + y2tic_textwidth; */
